--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="assets/images/ai-logo.png" type="image/x-icon">
   <title>Document</title>
   <link rel="stylesheet" href="assets/styles/style.css" />
+  <link rel="stylesheet" href="assets/styles/bottom-hover.css" />
 </head>
 <body>
   <main>
     <div class="main-content">
+      <section class="header">
+        <div class="header-content">
+          
+        </div>
+      </section>
+      <section class="body">
 
+      </section>
+      <section class="footer">
+
+      </section>
     </div>
-    <section class="hover-listen">
-      <div class="source-code">
-        <a href="https://github.com/godkingjay/BSCS-GVC-01-Infographics" target="_blank">
-          <img src="assets/images/github-logo.png" alt="source code">
-        </a>
-      </div>
-    </section>
   </main>
+  <section class="hover-listen">
+    <div class="source-code">
+      <a href="https://github.com/godkingjay/BSCS-GVC-01-Infographics" target="_blank">
+        <img src="assets/images/github-logo.png" alt="source code">
+      </a>
+    </div>
+  </section>
 </body>
 </html>
