--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <div class="main-content">
       <section class="header">
         <div class="header-content">
-          
+          <div class="header-topic">
+            <img src="assets/images/ai-logo.png" alt="">
+            <h1>Artificial Intelligence</h1>
+          </div>
+          <div class="header-title">
+
+          </div>
         </div>
       </section>
       <section class="body">
