--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
       <section class="header">
         <div class="header-content">
           <div class="header-topic">
-            <img src="assets/images/ai-logo.png" alt="">
-            <h1>Artificial Intelligence</h1>
-          </div>
-          <div class="header-title">
-
+            <img src="assets/images/ai-logo-main.png" alt="">
+            <div class="header-title">
+              <h1>Artificial Intelligence</h1>
+              <p>Behind the World's Industries</p>
+              <div class="header-color-ctn colors-theme">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
