--- a/index.html
+++ b/index.html
@@ -8,35 +8,57 @@
   <title>Document</title>
   <link rel="stylesheet" href="assets/styles/style.css" />
   <link rel="stylesheet" href="assets/styles/bottom-hover.css" />
+  <link rel="stylesheet" href="assets/styles/keyframes.css" />
+  <link rel="stylesheet" href="assets/styles/media-query.css" />
 </head>
 <body>
   <main>
-    <div class="main-content">
-      <section class="header">
-        <div class="header-content">
-          <div class="header-topic">
-            <img src="assets/images/ai-logo-main.png" alt="">
-            <div class="header-title">
-              <h1>Artificial Intelligence</h1>
-              <p>Behind the World's Industries</p>
-              <div class="header-color-ctn colors-theme">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
-            </div>
-          </div>
+    
+    <section id="Header" class="header">
+      <div class="header-backgrounds">
+        <span class="header-animated-shape-1"></span>
+        <span class="header-wave-1"></span>
+      </div>
+      <div class="header-content">
+        <div class="header-logo">
+          <img src="./assets/images/ai-logo-main.png" alt="">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
-      </section>
-      <section class="body">
+        <h1>Artificial Intelligence</h1>
+        <p>Behind The World's Industries</p>
+        <div class="color-theme">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </section>
 
-      </section>
-      <section class="footer">
+    <section id="Introduction" class="introduction">
+      <div class="intro-backgrounds">
 
-      </section>
-    </div>
+      </div>
+      <div class="intro-content">
+        Hello
+      </div>
+    </section>
+
+    <section id="AI-in-different-Industries">
+      <p>Ratio and Industries</p>
+    </section>
+
+    <section id="Advantages">
+      <p>Advantages</p>
+    </section>
+
+    <section id="Footer">
+      <p>Footer</p>
+    </section>
+
   </main>
   <section class="hover-listen">
     <div class="source-code">
