--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 
       </div>
       <div class="intro-content">
-        Hello
+        <div class="ai-about-ctn">
+          About AI
+        </div>
+        <div class="ai-role-ctn">
+          Role of AI
+        </div>
       </div>
     </section>
 
