--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <section id="Header" class="header">
       <div class="header-backgrounds">
-        <span class="header-animated-shape-1"></span>
+        <!-- <span class="header-animated-shape-1"></span> -->
         <span class="header-wave-1"></span>
       </div>
       <div class="header-content">
