--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="intro-content">
         <div class="ai-about-ctn">
-          About AI
+          <p>About AI</p>
         </div>
         <div class="ai-role-ctn">
           Role of AI
