--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     
     <section id="Header" class="header">
       <div class="header-backgrounds">
-        <!-- <span class="header-animated-shape-1"></span> -->
+        <span class="header-bg-shape-1"></span>
         <span class="header-wave-1"></span>
       </div>
-      <div class="header-content">
+      <div class="header-content content">
         <div class="header-logo">
           <img src="./assets/images/ai-logo-main.png" alt="">
           <span></span>
@@ -42,11 +42,11 @@
       <div class="intro-backgrounds">
 
       </div>
-      <div class="intro-content">
-        <div class="ai-about-ctn">
+      <div class="intro-content content">
+        <div class="ai-about-ctn s1">
           <p>About AI</p>
         </div>
-        <div class="ai-role-ctn">
+        <div class="ai-role-ctn s1">
           Role of AI
         </div>
       </div>
@@ -72,5 +72,7 @@
       </a>
     </div>
   </section>
+
+  <script src="app.js"></script>
 </body>
 </html>
