--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="assets/styles/bottom-hover.css" />
   <link rel="stylesheet" href="assets/styles/keyframes.css" />
   <link rel="stylesheet" href="assets/styles/media-query.css" />
+  <link rel="stylesheet" href="assets/styles/anim-classes.css" />
 </head>
 <body>
   <main>
@@ -40,7 +41,7 @@
 
     <section id="Introduction" class="introduction">
       <div class="intro-backgrounds">
-
+        <span class="intro-bg-cloud"></span>
       </div>
       <div class="intro-content content">
         <div class="ai-about-ctn s1">
@@ -52,11 +53,16 @@
       </div>
     </section>
 
-    <section id="AI-in-different-Industries">
-      <p>Ratio and Industries</p>
+    <section id="AI-in-different-Industries" class="industries">
+      <div class="industry-backgrounds">
+        <span class="industry-bg-cloud"></span>
+      </div>
+      <div class="intro-content content">
+        <p>Industries</p>
+      </div>
     </section>
 
-    <section id="Advantages">
+    <section id="Others" class="others">
       <p>Advantages</p>
     </section>
 
