--- a/index.html
+++ b/index.html
@@ -55,29 +55,35 @@
 
     <section id="AI-in-different-Industries" class="industries">
       <div class="industry-backgrounds">
-        <span class="industry-bg-cloud"></span>
+        <span class="industry-wave"></span>
       </div>
-      <div class="intro-content content">
+      <div class="industry-content content">
         <p>Industries</p>
       </div>
     </section>
 
     <section id="Others" class="others">
-      <p>Advantages</p>
+      <div class="others-backgrounds">
+        <span class="others-bg-end"></span>
+      </div>
+      <div class="others-content content">
+        <p>Advantages</p>
+      </div>
     </section>
 
-    <section id="Footer">
+    <section id="Footer" class="footer">
       <p>Footer</p>
     </section>
 
   </main>
-  <section class="hover-listen">
+
+  <div class="hover-listen">
     <div class="source-code">
       <a href="https://github.com/godkingjay/BSCS-GVC-01-Infographics" target="_blank">
         <img src="assets/images/github-logo.png" alt="source code">
       </a>
     </div>
-  </section>
+  </div>
 
   <script src="app.js"></script>
 </body>
