--- a/index.html
+++ b/index.html
@@ -44,11 +44,23 @@
         <span class="intro-bg-cloud"></span>
       </div>
       <div class="intro-content content">
-        <div class="ai-about-ctn s1">
-          <p>About AI</p>
+        <div class="intro-about-ctn s1">
+          <div class="intro-img-ctn">
+            <img src="assets/images/ai-illustration.png" alt="">
+          </div>
+          <div class="intro-card-content">
+            <h2 class="intro-card-title-about">About AI</h2>
+            <p>In dolore adipisicing nisi ullamco consequat ad nostrud aliquip commodo minim veniam sunt elit nisi. Ex eu in deserunt irure enim pariatur elit laboris aute. Voluptate occaecat do dolore amet eiusmod enim quis reprehenderit. Voluptate deserunt veniam nisi quis exercitation deserunt nulla deserunt sit ipsum aute consequat dolore. Commodo eu veniam dolore minim velit quis officia consequat adipisicing amet excepteur officia.</p>
+          </div>
         </div>
-        <div class="ai-role-ctn s1">
-          Role of AI
+        <div class="intro-role-ctn s1">
+          <div class="intro-img-ctn">
+            <img class="intro-globe" src="assets/images/global-illustration.png" alt="">
+          </div>
+          <div class="intro-card-content">
+            <h2 class="intro-card-title-role">Role of AI</h2>
+            <p>Pariatur amet nulla sint sunt ullamco proident dolor culpa ullamco pariatur irure in ullamco laborum. Quis do reprehenderit elit in. Aliquip dolor ad magna incididunt reprehenderit. Velit incididunt dolore excepteur qui occaecat nostrud laboris ea duis. Anim irure magna sunt duis tempor incididunt sit minim qui aute. Cillum nulla est nulla amet voluptate consequat veniam laboris do do.</p>
+          </div>
         </div>
       </div>
     </section>
