--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <div class="header-backgrounds">
         <span class="header-bg-shape-1"></span>
         <span class="header-wave-1"></span>
+        <span class="header-blob-tl"></span>
+        <span class="header-blob-tr"></span>
       </div>
       <div class="header-content content">
         <div class="header-logo">
