--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="Header" class="header">
       <div class="header-backgrounds">
         <span class="header-bg-shape-1"></span>
-        <span class="header-wave-1"></span>
+        <span class="header-animated-wave-1"></span>
         <span class="header-blob-tl"></span>
         <span class="header-blob-tr"></span>
       </div>
@@ -48,7 +48,7 @@
       <div class="intro-content content">
         <div class="intro-about-ctn s1">
           <div class="intro-img-ctn">
-            <img src="assets/images/ai-illustration.png" alt="">
+            
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-about">About AI</h2>
@@ -57,7 +57,7 @@
         </div>
         <div class="intro-role-ctn s1">
           <div class="intro-img-ctn">
-            <img class="intro-globe" src="assets/images/global-illustration.png" alt="">
+            
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-role">Role of AI</h2>
