update media query

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <div class="intro-content content">
         <div class="intro-about-ctn s1">
           <div class="intro-img-ctn">
-            
+            <div class="about-blob-2 blob"></div>
+            <div class="about-blob-1 blob"></div>
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-about">About AI</h2>
@@ -60,7 +61,7 @@
             
           </div>
           <div class="intro-card-content">
-            <h2 class="intro-card-title-role">Role of AI</h2>
+            <h2 class="intro-card-title-role">Role of AI in a Global Scale</h2>
             <p>Pariatur amet nulla sint sunt ullamco proident dolor culpa ullamco pariatur irure in ullamco laborum. Quis do reprehenderit elit in. Aliquip dolor ad magna incididunt reprehenderit. Velit incididunt dolore excepteur qui occaecat nostrud laboris ea duis. Anim irure magna sunt duis tempor incididunt sit minim qui aute. Cillum nulla est nulla amet voluptate consequat veniam laboris do do.</p>
           </div>
         </div>
