update blob and background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="Header" class="header">
       <div class="header-backgrounds">
         <span class="header-bg-shape-1"></span>
-        <span class="header-animated-wave-1"></span>
+        <span class="header-wave-1"></span>
         <span class="header-blob-tl"></span>
         <span class="header-blob-tr"></span>
       </div>
@@ -50,6 +50,7 @@
           <div class="intro-img-ctn">
             <div class="about-blob-2 blob"></div>
             <div class="about-blob-1 blob"></div>
+            <img src="assets/images/ai/ai-development-3454695-2918404.png" alt="">
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-about">About AI</h2>
