--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         </div>
         <div class="intro-role-ctn s1">
           <div class="intro-img-ctn">
-            
+            <div class="role-blob-2 blob"></div>
+            <div class="role-blob-1 blob"></div>
+            <!-- <img src="" alt=""> -->
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-role">Role of AI in a Global Scale</h2>
