--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="intro-img-ctn">
             <div class="role-blob-2 blob"></div>
             <div class="role-blob-1 blob"></div>
-            <!-- <img src="" alt=""> -->
+            <img src="assets/images/role/0543b014fdb54ee440a1eb2b2a248f90-removebg.png" alt="">
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-role">Role of AI in a Global Scale</h2>
