added drop shadows

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="assets/images/role/0543b014fdb54ee440a1eb2b2a248f90-removebg.png" alt="">
           </div>
           <div class="intro-card-content">
-            <h2 class="intro-card-title-role">Role of AI in a Global Scale</h2>
+            <h2 class="intro-card-title-role">AI in a Global Scale</h2>
             <p>Pariatur amet nulla sint sunt ullamco proident dolor culpa ullamco pariatur irure in ullamco laborum. Quis do reprehenderit elit in. Aliquip dolor ad magna incididunt reprehenderit. Velit incididunt dolore excepteur qui occaecat nostrud laboris ea duis. Anim irure magna sunt duis tempor incididunt sit minim qui aute. Cillum nulla est nulla amet voluptate consequat veniam laboris do do.</p>
           </div>
         </div>
