--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
         <span class="industry-wave"></span>
       </div>
       <div class="industry-content content">
-        <p>Industries</p>
+        <div class="industry-circular">
+          
+        </div>
+        <div class="industry-ctn">
+
+        </div>
       </div>
     </section>
 
@@ -85,7 +90,7 @@
         <span class="others-bg-end"></span>
       </div>
       <div class="others-content content">
-        <p>Advantages</p>
+        
       </div>
     </section>
 
