--- a/index.html
+++ b/index.html
@@ -76,11 +76,51 @@
         <span class="industry-wave"></span>
       </div>
       <div class="industry-content content">
-        <div class="industry-circular">
+        <div class="industry-circular-wrapper">
+          <div class="industry-circular">
+            <div class="industry-circular-lines">
           
+            </div>
+            <div class="industry-ratio">
+            </div>
+            <div class="industry-title">
+            </div>
+            <div class="industry-circle-ctn">
+              <div class="industry-circle-wrapper">
+                <div class="industry-circle">
+                  <h2>Agriculture</h2>
+                </div>
+              </div>
+              <div class="industry-circle-wrapper">
+                <div class="industry-circle">
+                  <h2>Economics</h2>
+                </div>
+              </div>
+              <div class="industry-circle-wrapper">
+                <div class="industry-circle">
+                  <h2>Education</h2>
+                </div>
+              </div>
+              <div class="industry-circle-wrapper">
+                <div class="industry-circle">
+                  <h2>Health</h2>
+                </div>
+              </div>
+              <div class="industry-circle-wrapper">
+                <div class="industry-circle">
+                  <h2>Business</h2>
+                </div>
+              </div>
+              <div class="industry-circle-wrapper">
+                <div class="industry-circle">
+                  <h2>Others</h2>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="industry-ctn">
-
+          
         </div>
       </div>
     </section>
