--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <section id="Introduction" class="introduction">
       <div class="intro-backgrounds">
+        <span class="intro-bg-meteor"></span>
         <span class="intro-bg-cloud"></span>
       </div>
       <div class="intro-content content">
