industry circle numbers

--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
         <div class="industry-circular-wrapper">
           <div class="industry-circular">
             <div class="industry-circular-lines">
-          
+              <span class="cl-1"></span>
             </div>
-            <div class="industry-ratio">
-            </div>
+            <!-- <div class="industry-ratio">
+              
+            </div> -->
             <div class="industry-title">
+              <h2>AI in Different Industries</h2>
             </div>
             <div class="industry-circle-ctn">
               <div class="industry-circle-wrapper">
