--- a/index.html
+++ b/index.html
@@ -134,40 +134,35 @@
           </div>
         </div>
         <div class="industry-ctn">
-          <div class="industry-type-ctn">
-            <article class="industry-card">
-              <div class="card-image-ctn">
+          <div class="industry-card-wrapper">
+            <div class="industry-card">
+              <div class="industry-card-img-ctn">
+
+              </div>
+              <div class="industry-card-content-ctn">
+                <h2>Agriculture</h2>
+                <ul>
+                  <li>Commodo esse ad laborum commodo reprehenderit labore magna mollit quis ut.</li>
+                  <li>Dolor eiusmod enim culpa officia sunt laborum.</li>
+                  <li>Consectetur qui enim enim nisi et fugiat proident dolor ea ipsum reprehenderit elit irure.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="industry-card-wrapper">
+            <div class="industry-card">
+              <div class="industry-card-img-ctn">
                 
               </div>
-              <div class="card-content">
-                <p>Agriculture</p>
+              <div class="industry-card-content-ctn">
+                <h2>Economics</h2>
+                <ul>
+                  <li>Commodo esse ad laborum commodo reprehenderit labore magna mollit quis ut.</li>
+                  <li>Dolor eiusmod enim culpa officia sunt laborum.</li>
+                  <li>Consectetur qui enim enim nisi et fugiat proident dolor ea ipsum reprehenderit elit irure.</li>
+                </ul>
               </div>
-            </article>
-          </div>
-          <div class="industry-type-ctn">
-            <article class="industry-card">
-              <p>Economics</p>
-            </article>
-          </div>
-          <div class="industry-type-ctn">
-            <article class="industry-card">
-              <p>Education</p>
-            </article>
-          </div>
-          <div class="industry-type-ctn">
-            <article class="industry-card">
-              <p>Health</p>
-            </article>
-          </div>
-          <div class="industry-type-ctn">
-            <article class="industry-card">
-              <p>Business</p>
-            </article>
-          </div>
-          <div class="industry-type-ctn">
-            <article class="industry-card">
-              <p>Others</p>
-            </article>
+            </div>
           </div>
         </div>
       </div>
