--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="industry-card-wrapper">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
-
+                <span></span>
               </div>
               <div class="industry-card-content-ctn">
                 <h2>Agriculture</h2>
@@ -157,9 +157,9 @@
               <div class="industry-card-content-ctn">
                 <h2>Economics</h2>
                 <ul>
-                  <li>Commodo esse ad laborum commodo reprehenderit labore magna mollit quis ut.</li>
-                  <li>Dolor eiusmod enim culpa officia sunt laborum.</li>
-                  <li>Consectetur qui enim enim nisi et fugiat proident dolor ea ipsum reprehenderit elit irure.</li>
+                  <li>Veniam Lorem nostrud consectetur pariatur ipsum.</li>
+                  <li>Ad amet ut duis eu nostrud mollit tempor reprehenderit eiusmod veniam.</li>
+                  <li>Adipisicing non ea pariatur cupidatat amet ut elit.</li>
                 </ul>
               </div>
             </div>
