--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
             <div class="industry-card">
               <div class="industry-card-img-ctn">
                 <span></span>
+                <img src="assets/images/plant-svgrepo-com.svg" alt="">
+                <span>1</span>
               </div>
               <div class="industry-card-content-ctn">
                 <h2>Agriculture</h2>
