--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
           <div class="industry-card-wrapper">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
-                
+                <span></span>
+                <img src="assets/images/economy-svgrepo-com.svg" alt="">
+                <span>2</span>
               </div>
               <div class="industry-card-content-ctn">
                 <h2>Economics</h2>
@@ -162,6 +164,74 @@
                   <li>Veniam Lorem nostrud consectetur pariatur ipsum.</li>
                   <li>Ad amet ut duis eu nostrud mollit tempor reprehenderit eiusmod veniam.</li>
                   <li>Adipisicing non ea pariatur cupidatat amet ut elit.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="industry-card-wrapper">
+            <div class="industry-card">
+              <div class="industry-card-img-ctn">
+                <span></span>
+                <img src="assets/images/education-svgrepo-com.svg" alt="">
+                <span>3</span>
+              </div>
+              <div class="industry-card-content-ctn">
+                <h2>Education</h2>
+                <ul>
+                  <li>Aute labore ullamco irure labore.</li>
+                  <li>Cupidatat amet minim cupidatat ex laborum tempor qui ut magna velit exercitation nostrud reprehenderit ad.</li>
+                  <li>Labore consectetur do proident sit consectetur est ut veniam mollit consectetur in.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="industry-card-wrapper">
+            <div class="industry-card">
+              <div class="industry-card-img-ctn">
+                <span></span>
+                <img src="assets/images/health-care-medicine-svgrepo-com.svg" alt="">
+                <span>4</span>
+              </div>
+              <div class="industry-card-content-ctn">
+                <h2>Health</h2>
+                <ul>
+                  <li>Proident deserunt duis sunt consequat aute dolore sit eu culpa occaecat adipisicing esse dolore deserunt.</li>
+                  <li>Ullamco mollit ad dolore veniam esse.</li>
+                  <li>Eu fugiat in ipsum officia ex nostrud veniam ipsum fugiat duis laborum.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="industry-card-wrapper">
+            <div class="industry-card">
+              <div class="industry-card-img-ctn">
+                <span></span>
+                <img src="assets/images/businessman-svgrepo-com.svg" alt="">
+                <span>5</span>
+              </div>
+              <div class="industry-card-content-ctn">
+                <h2>Business</h2>
+                <ul>
+                  <li>Cupidatat id exercitation occaecat officia excepteur.</li>
+                  <li>Commodo voluptate commodo do fugiat velit do est ex et adipisicing ut voluptate nisi consequat.</li>
+                  <li>Dolore aliqua culpa irure qui reprehenderit laborum.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="industry-card-wrapper">
+            <div class="industry-card">
+              <div class="industry-card-img-ctn">
+                <span></span>
+                <img src="assets/images/industry-svgrepo-com.svg" alt="">
+                <span>6</span>
+              </div>
+              <div class="industry-card-content-ctn">
+                <h2>Others</h2>
+                <ul>
+                  <li>Deserunt et non laborum irure elit ullamco.</li>
+                  <li>Eiusmod occaecat voluptate ad officia laboris eiusmod nisi non quis esse sunt cupidatat.</li>
+                  <li>Do do do aliquip esse sit quis adipisicing minim nostrud anim sint ullamco.</li>
                 </ul>
               </div>
             </div>
