--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="industry-ctn">
-          <div class="industry-card-wrapper">
+          <div class="industry-card-wrapper s2-a">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -151,7 +151,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div class="industry-card-wrapper s2-b">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -168,7 +168,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div class="industry-card-wrapper s2-a">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -185,7 +185,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div class="industry-card-wrapper s2-b">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -202,7 +202,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div class="industry-card-wrapper s2-a">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
                 <span></span>
@@ -219,7 +219,7 @@
               </div>
             </div>
           </div>
-          <div class="industry-card-wrapper">
+          <div class="industry-card-wrapper s2-b">
             <div class="industry-card">
               <div class="industry-card-img-ctn">
                 <span></span>
