update industry list

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'> -->
   <link rel="shortcut icon" href="assets/images/ai-logo.png" type="image/x-icon">
   <title>Document</title>
   <link rel="stylesheet" href="assets/styles/style.css" />
@@ -55,7 +58,7 @@
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-about">About AI</h2>
-            <p>In dolore adipisicing nisi ullamco consequat ad nostrud aliquip commodo minim veniam sunt elit nisi. Ex eu in deserunt irure enim pariatur elit laboris aute. Voluptate occaecat do dolore amet eiusmod enim quis reprehenderit. Voluptate deserunt veniam nisi quis exercitation deserunt nulla deserunt sit ipsum aute consequat dolore. Commodo eu veniam dolore minim velit quis officia consequat adipisicing amet excepteur officia.</p>
+            <p>Artificial intelligence (AI) is the replication or approximation of human intelligence in machines. The ideal feature of artificial intelligence is its ability to rationalize and execute actions that have the best likelihood of reaching a certain goal. The goals of artificial intelligence include computer-enhanced learning, thinking, and perception. AI is now being employed in a variety of industries ranging from banking to healthcare.</p>
           </div>
         </div>
         <div class="intro-role-ctn s1-b">
@@ -66,7 +69,7 @@
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-role">AI in a Global Scale</h2>
-            <p>Pariatur amet nulla sint sunt ullamco proident dolor culpa ullamco pariatur irure in ullamco laborum. Quis do reprehenderit elit in. Aliquip dolor ad magna incididunt reprehenderit. Velit incididunt dolore excepteur qui occaecat nostrud laboris ea duis. Anim irure magna sunt duis tempor incididunt sit minim qui aute. Cillum nulla est nulla amet voluptate consequat veniam laboris do do.</p>
+            <p>AI will help numerous sectors and industries streamline and improve their processes. AI is not a far-off vision, but rather something that is now being integrated and used in a range of industries. Agriculture, Economics, Education, Healthcare, and Business are examples of such fields. There are countless examples of AI already having an impact on the world and significantly enhancing human capabilities.</p>
           </div>
         </div>
       </div>
@@ -142,8 +145,11 @@
                 <h2>Agriculture</h2>
                 <ul>
                   <li>Commodo esse ad laborum commodo reprehenderit labore magna mollit quis ut.</li>
+                  <span>Hello</span>
                   <li>Dolor eiusmod enim culpa officia sunt laborum.</li>
+                  <span>hello</span>
                   <li>Consectetur qui enim enim nisi et fugiat proident dolor ea ipsum reprehenderit elit irure.</li>
+                  <span>asdasd</span>
                 </ul>
               </div>
             </div>
@@ -159,8 +165,11 @@
                 <h2>Economics</h2>
                 <ul>
                   <li>Veniam Lorem nostrud consectetur pariatur ipsum.</li>
+                  <span>Hello</span> 
                   <li>Ad amet ut duis eu nostrud mollit tempor reprehenderit eiusmod veniam.</li>
+                  <span>Hello</span> 
                   <li>Adipisicing non ea pariatur cupidatat amet ut elit.</li>
+                  <span>Hello</span> 
                 </ul>
               </div>
             </div>
@@ -176,8 +185,11 @@
                 <h2>Education</h2>
                 <ul>
                   <li>Aute labore ullamco irure labore.</li>
+                  <span>Hello</span> 
                   <li>Cupidatat amet minim cupidatat ex laborum tempor qui ut magna velit exercitation nostrud reprehenderit ad.</li>
+                  <span>Hello</span> 
                   <li>Labore consectetur do proident sit consectetur est ut veniam mollit consectetur in.</li>
+                  <span>Hello</span> 
                 </ul>
               </div>
             </div>
@@ -192,9 +204,12 @@
               <div class="industry-card-content-ctn">
                 <h2>Health</h2>
                 <ul>
-                  <li>Proident deserunt duis sunt consequat aute dolore sit eu culpa occaecat adipisicing esse dolore deserunt.</li>
-                  <li>Ullamco mollit ad dolore veniam esse.</li>
-                  <li>Eu fugiat in ipsum officia ex nostrud veniam ipsum fugiat duis laborum.</li>
+                  <li>Precision Medicine and Algorithms</li>
+                  <span>Hello</span> 
+                  <li>Computer Vision for Diagnosis and Surgery</li>
+                  <span>Hello</span> 
+                  <li>Predicting Disease Spread</li>
+                  <span>Hello</span> 
                 </ul>
               </div>
             </div>
@@ -210,8 +225,11 @@
                 <h2>Business</h2>
                 <ul>
                   <li>Cupidatat id exercitation occaecat officia excepteur.</li>
+                  <span>Hello</span> 
                   <li>Commodo voluptate commodo do fugiat velit do est ex et adipisicing ut voluptate nisi consequat.</li>
+                  <span>Hello</span> 
                   <li>Dolore aliqua culpa irure qui reprehenderit laborum.</li>
+                  <span>Hello</span> 
                 </ul>
               </div>
             </div>
@@ -227,8 +245,11 @@
                 <h2>Others</h2>
                 <ul>
                   <li>Deserunt et non laborum irure elit ullamco.</li>
+                  <span>Hello</span> 
                   <li>Eiusmod occaecat voluptate ad officia laboris eiusmod nisi non quis esse sunt cupidatat.</li>
+                  <span>Hello</span> 
                   <li>Do do do aliquip esse sit quis adipisicing minim nostrud anim sint ullamco.</li>
+                  <span>Hello</span> 
                 </ul>
               </div>
             </div>
