update industry economics

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="intro-card-content">
             <h2 class="intro-card-title-about">About AI</h2>
-            <p>Artificial intelligence (AI) is the replication or approximation of human intelligence in machines. The ideal feature of artificial intelligence is its ability to rationalize and execute actions that have the best likelihood of reaching a certain goal. The goals of artificial intelligence include computer-enhanced learning, thinking, and perception. AI is now being employed in a variety of industries ranging from banking to healthcare.</p>
+            <p>Artificial intelligence (AI) is the replication or approximation of human intelligence in machines. The ideal feature of artificial intelligence is its ability to rationalize and execute actions that have the best likelihood of reaching a certain goal. The goals of artificial intelligence include computer-enhanced learning, thinking, and perception.</p>
           </div>
         </div>
         <div class="intro-role-ctn s1-b">
@@ -144,12 +144,12 @@
               <div class="industry-card-content-ctn">
                 <h2>Agriculture</h2>
                 <ul>
-                  <li>Commodo esse ad laborum commodo reprehenderit labore magna mollit quis ut.</li>
-                  <span>Hello</span>
-                  <li>Dolor eiusmod enim culpa officia sunt laborum.</li>
-                  <span>hello</span>
-                  <li>Consectetur qui enim enim nisi et fugiat proident dolor ea ipsum reprehenderit elit irure.</li>
-                  <span>asdasd</span>
+                  <li>A. Intelligent Spraying of Chemicals</li>
+                  <span>AI technology aids in the detection of plant diseases, pests, and farm nutrition deficiencies. AI sensors can detect and target weeds before determining which herbicide to use in the area.</span>
+                  <li>AI-Based Robots for Farm Harvesting</li>
+                  <span>AI-based robotic machines can perform bulk harvesting with greater accuracy and speed. These machines aid in increasing productivity and reducing waste from crops left in the field.</span>
+                  <li>Crop Yield Predictions and Price Forecasts</li>
+                  <span>AI can assist in pest and disease detection, estimating tomato output and yield, and forecasting prices. They can advise farmers and governments on future price patterns, demand levels, crop types to sow for best benefit, pesticide use, and so on.</span>
                 </ul>
               </div>
             </div>
@@ -164,8 +164,8 @@
               <div class="industry-card-content-ctn">
                 <h2>Economics</h2>
                 <ul>
-                  <li>Veniam Lorem nostrud consectetur pariatur ipsum.</li>
-                  <span>Hello</span> 
+                  <li>AI-Powered Decision-Making</li>
+                  <span>AI will enable government authorities to forgo outdated data collection methods in favor of data-driven judgments. Data-driven monitoring, policy evaluation, and analysis will become possible thanks to advances in information technology.</span> 
                   <li>Ad amet ut duis eu nostrud mollit tempor reprehenderit eiusmod veniam.</li>
                   <span>Hello</span> 
                   <li>Adipisicing non ea pariatur cupidatat amet ut elit.</li>
@@ -205,11 +205,11 @@
                 <h2>Health</h2>
                 <ul>
                   <li>Precision Medicine and Algorithms</li>
-                  <span>Hello</span> 
+                  <span>AI can process massive volumes of data to determine effective treatments for patients or to spot growing health risks before they reach a level that a person would notice.</span> 
                   <li>Computer Vision for Diagnosis and Surgery</li>
-                  <span>Hello</span> 
+                  <span>Computer vision and machine learning are showing improvement in identifying illnesses like skin cancer and even assisting surgeons during intricate surgery.</span> 
                   <li>Predicting Disease Spread</li>
-                  <span>Hello</span> 
+                  <span>Experts have widely employed AI to anticipate the spread and impact of viruses such as COVID-19.</span> 
                 </ul>
               </div>
             </div>
