update industry economics

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                 <ul>
                   <li>AI-Powered Decision-Making</li>
                   <span>AI will enable government authorities to forgo outdated data collection methods in favor of data-driven judgments. Data-driven monitoring, policy evaluation, and analysis will become possible thanks to advances in information technology.</span> 
-                  <li>Ad amet ut duis eu nostrud mollit tempor reprehenderit eiusmod veniam.</li>
-                  <span>Hello</span> 
+                  <li>Labor Automation</li>
+                  <span>AI can automate non-routine, cognitive tasks performed by highly skilled professionals, freeing them up to work on more essential tasks.</span> 
                   <li>Adipisicing non ea pariatur cupidatat amet ut elit.</li>
                   <span>Hello</span> 
                 </ul>
