update industry economics

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                   <span>AI will enable government authorities to forgo outdated data collection methods in favor of data-driven judgments. Data-driven monitoring, policy evaluation, and analysis will become possible thanks to advances in information technology.</span> 
                   <li>Labor Automation</li>
                   <span>AI can automate non-routine, cognitive tasks performed by highly skilled professionals, freeing them up to work on more essential tasks.</span> 
-                  <li>Adipisicing non ea pariatur cupidatat amet ut elit.</li>
-                  <span>Hello</span> 
+                  <li>Economic Growth Prediction</li>
+                  <span>With AI, experts can predict economic trends for making accurate judgments. Experts can use AI as a recommendation engine for better decision-making.</span> 
                 </ul>
               </div>
             </div>
